<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scrapbookapp.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:contentDescription="@string/tower"
        android:src="@drawable/eiffeltower" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="40dp"
        android:text="@string/opera" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="28dp"
        android:text="@string/stoneHenge" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/house"
        android:src="@drawable/opera" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_marginBottom="33dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/pyramids" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView2"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/egypt"
        android:src="@drawable/pyramids" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:layout_marginRight="13dp"
        android:contentDescription="@string/henge"
        android:src="@drawable/stonehenge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="40dp"
        android:text="@string/eiffel" />

</RelativeLayout>
